add two further example recipes, update index.html to list them

--- a/recipes/chickpea-curry-with-coconut.html
+++ b/recipes/chickpea-curry-with-coconut.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8"/>
-        <title>Lasagna</title>
+        <meta charset="UTF-8">
+        <title>Chickpea Curry with Coconut</title>
     </head>
     <body>
-        <h1>Lasagna</h1>
-        <img href="" alt="A rather delicious looking Lasagna">
+        <h1>Chickpea Curry with Coconut</h1>
+        <img href="" alt="A rather delicious looking Chickpea Curry">
         <h3>Description</h3>
         <p>Text</p>
         <p>More text</p>
