--- a/recipes/tabouli-salad.html
+++ b/recipes/tabouli-salad.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8"/>
-        <title>Lasagna</title>
+        <meta charset="UTF-8">
+        <title>Tabouli Salad</title>
     </head>
     <body>
-        <h1>Lasagna</h1>
-        <img href="" alt="A rather delicious looking Lasagna">
+        <h1>Tabuli Salad</h1>
+        <img href="" alt="A rather delicious looking tabouli salad">
         <h3>Description</h3>
         <p>Text</p>
         <p>More text</p>
