--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1> Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/tabouli-salad.html">Tabouli Salad</a></li>
+            <li><a href="recipes/chickpea-curry-with-coconut.html">Chickpea Curry with Coconut</a></li>
+        </ul>
     </body>
 </html>
