Add width and height attributes to image

--- a/recipes/chickpea-curry-with-coconut.html
+++ b/recipes/chickpea-curry-with-coconut.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Chickpea Curry with Coconut</h1>
-        <img href="" alt="A rather delicious looking Chickpea Curry">
+        <img href="" width="100" height="100" alt="A rather delicious looking Chickpea Curry">
         <h3>Description</h3>
         <p>Text</p>
         <p>More text</p>
